Improved some things